MAKE_EXCEPTION_CLASS and THROW_EXCEPTION macros added. ISingleton class added.

--- a/BoltEngine/BoltEngine.vcxproj
+++ b/BoltEngine/BoltEngine.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="BoltEngine.h" />
     <ClInclude Include="BoltUtilityMacros.h" />
     <ClInclude Include="CException.h" />
+    <ClInclude Include="ISingleton.h" />
     <ClInclude Include="IUnCopyable.h" />
     <ClInclude Include="Type.h" />
   </ItemGroup>
