CVersion class added.

--- a/BoltEngine/BoltEngine.vcxproj
+++ b/BoltEngine/BoltEngine.vcxproj
@@ -41,9 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(BOOST_DIRECTORY);$(IncludePath)</IncludePath>
+    <LibraryPath>$(BOOST_STAGE_32);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(BOOST_DIRECTORY);$(IncludePath)</IncludePath>
+    <LibraryPath>$(BOOST_STAGE_32);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -81,8 +85,12 @@
     <ClInclude Include="BoltConfigurationMacros.h" />
     <ClInclude Include="BoltEngine.h" />
     <ClInclude Include="BoltUtilityMacros.h" />
+    <ClInclude Include="CArray.h" />
     <ClInclude Include="CDynamicLib.h" />
     <ClInclude Include="CException.h" />
+    <ClInclude Include="CString.h" />
+    <ClInclude Include="CVersion.h" />
+    <ClInclude Include="IPlugin.h" />
     <ClInclude Include="ISingleton.h" />
     <ClInclude Include="IUnCopyable.h" />
     <ClInclude Include="Type.h" />
@@ -93,6 +101,8 @@
   <ItemGroup>
     <ClCompile Include="CDynamicLib.cpp" />
     <ClCompile Include="CException.cpp" />
+    <ClCompile Include="CVersion.cpp" />
+    <ClCompile Include="IPlugin.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
