--- a/BoltEngine/BoltEngine.vcxproj.filters
+++ b/BoltEngine/BoltEngine.vcxproj.filters
@@ -29,11 +29,8 @@
     <ClInclude Include="CVersion.h">
       <Filter>Utility</Filter>
     </ClInclude>
-    <ClInclude Include="CString.h">
-      <Filter>TL</Filter>
-    </ClInclude>
-    <ClInclude Include="CArray.h">
-      <Filter>TL</Filter>
+    <ClInclude Include="CPluginManager.h">
+      <Filter>Plugin</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -49,9 +46,6 @@
     <Filter Include="Plugin">
       <UniqueIdentifier>{eb6bd8b9-6ac5-4500-8406-022268599354}</UniqueIdentifier>
     </Filter>
-    <Filter Include="TL">
-      <UniqueIdentifier>{f8c36dac-3c15-46cf-8134-a2176176b612}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="ExceptionCodes.enum">
@@ -65,11 +59,11 @@
     <ClCompile Include="CDynamicLib.cpp">
       <Filter>Plugin</Filter>
     </ClCompile>
-    <ClCompile Include="IPlugin.cpp">
-      <Filter>Plugin</Filter>
-    </ClCompile>
     <ClCompile Include="CVersion.cpp">
       <Filter>Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="CPluginManager.cpp">
+      <Filter>Plugin</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
