--- a/BoltWin32Window/BoltWin32Window.vcxproj
+++ b/BoltWin32Window/BoltWin32Window.vcxproj
@@ -10,10 +10,19 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="BoltWin32WindowMain.cpp" />
+    <ClCompile Include="CWin32Window.cpp" />
+    <ClCompile Include="CWin32WindowPlugin.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CWin32Window.h" />
+    <ClInclude Include="CWin32WindowPlugin.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{DE533DCC-A380-4FF2-902C-AC235731D27F}</ProjectGuid>
+    <ProjectGuid>{3EFB7E33-87F8-43AE-9A0A-559189C473D3}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BoltEngine</RootNamespace>
+    <RootNamespace>BoltWin32Window</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -55,7 +64,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;BOLTENGINE_EXPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -71,7 +80,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;BOLTENGINE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -81,40 +90,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="BoltConfigurationMacros.h" />
-    <ClInclude Include="BoltEngine.h" />
-    <ClInclude Include="BoltUtilityMacros.h" />
-    <ClInclude Include="CBoltEngine.h" />
-    <ClInclude Include="CDynamicLib.h" />
-    <ClInclude Include="CException.h" />
-    <ClInclude Include="CPluginManager.h" />
-    <ClInclude Include="CVersion.h" />
-    <ClInclude Include="CWindowManager.h" />
-    <ClInclude Include="IPlugin.h" />
-    <ClInclude Include="IRenderer.h" />
-    <ClInclude Include="IRendererPlugin.h" />
-    <ClInclude Include="ISingleton.h" />
-    <ClInclude Include="IUnCopyable.h" />
-    <ClInclude Include="IWindow.h" />
-    <ClInclude Include="IWindowPlugin.h" />
-    <ClInclude Include="Type.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ExceptionCodes.enum" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="CBoltEngine.cpp" />
-    <ClCompile Include="CDynamicLib.cpp" />
-    <ClCompile Include="CException.cpp" />
-    <ClCompile Include="CPluginManager.cpp" />
-    <ClCompile Include="CVersion.cpp" />
-    <ClCompile Include="CWindowManager.cpp" />
-    <ClCompile Include="IPlugin.cpp" />
-    <ClCompile Include="IRendererPlugin.cpp" />
-    <ClCompile Include="IWindow.cpp" />
-    <ClCompile Include="IWindowPlugin.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
