CEventHandler class added

--- a/BoltEngine/BoltEngine.vcxproj
+++ b/BoltEngine/BoltEngine.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="BoltUtilityMacros.h" />
     <ClInclude Include="CBoltEngine.h" />
     <ClInclude Include="CDynamicLib.h" />
+    <ClInclude Include="CEventHandler.h" />
     <ClInclude Include="CException.h" />
     <ClInclude Include="CPluginManager.h" />
     <ClInclude Include="CVersion.h" />
