--- a/BoltEngine/BoltEngine.vcxproj
+++ b/BoltEngine/BoltEngine.vcxproj
@@ -71,7 +71,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;BOLTENGINE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;BOLTENGINE_EXPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -86,6 +86,7 @@
     <ClInclude Include="BoltEngine.h" />
     <ClInclude Include="BoltUtilityMacros.h" />
     <ClInclude Include="CBoltEngine.h" />
+    <ClInclude Include="CColor.h" />
     <ClInclude Include="CDynamicLib.h" />
     <ClInclude Include="CEventHandler.h" />
     <ClInclude Include="CException.h" />
@@ -100,7 +101,7 @@
     <ClInclude Include="IUnCopyable.h" />
     <ClInclude Include="IWindow.h" />
     <ClInclude Include="IWindowPlugin.h" />
-    <ClInclude Include="Type.h" />
+    <ClInclude Include="STL.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ExceptionCodes.enum" />
