--- a/BoltEngine/BoltEngine.vcxproj.filters
+++ b/BoltEngine/BoltEngine.vcxproj.filters
@@ -11,9 +11,6 @@
     <ClInclude Include="IUnCopyable.h">
       <Filter>Utility</Filter>
     </ClInclude>
-    <ClInclude Include="Type.h">
-      <Filter>Common</Filter>
-    </ClInclude>
     <ClInclude Include="CException.h">
       <Filter>Exception</Filter>
     </ClInclude>
@@ -55,6 +52,12 @@
     </ClInclude>
     <ClInclude Include="CRendererManager.h">
       <Filter>Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="STL.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="CColor.h">
+      <Filter>Utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
