--- a/BoltWin32Window/BoltWin32Window.vcxproj.filters
+++ b/BoltWin32Window/BoltWin32Window.vcxproj.filters
@@ -26,5 +26,12 @@
     <ClInclude Include="CWin32Window.h">
       <Filter>Window</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="BoltWin32Window.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="BoltEngineLogo.png" />
   </ItemGroup>
 </Project>
