--- a/BoltEngine/BoltEngine.vcxproj.filters
+++ b/BoltEngine/BoltEngine.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="IManageable.h">
       <Filter>Utility</Filter>
     </ClInclude>
+    <ClInclude Include="ITexture.h">
+      <Filter>Renderer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Common">
